--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.2",
     "@loadable/component": "^5.16.4",
     "antd": "^5.22.5",
     "autoprefixer": "^10.4.20",
