--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -19,14 +19,15 @@
     "nodemon": "^3.1.9"
   },
   "dependencies": {
-    "@prisma/client": "^6.2.1",
+    "@prisma/client": "6.0.1",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
-    "prisma": "^6.2.1",
+    "nanoid": "^3.3.8",
+    "prisma": "6.0.1",
     "sqlite3": "^5.1.7"
   }
 }
