--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -14,9 +14,11 @@
     "@loadable/component": "^5.16.4",
     "antd": "^5.22.5",
     "autoprefixer": "^10.4.20",
+    "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
     "immer": "^10.1.1",
+    "lodash-es": "^4.17.21",
     "nanoid": "^5.0.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -29,6 +31,7 @@
     "@craco/craco": "^7.1.0",
     "@eslint/js": "^9.17.0",
     "@types/loadable__component": "^5.13.9",
+    "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
