--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -25,9 +25,12 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "md5": "^2.3.0",
     "morgan": "^1.10.0",
+    "multer": "1.4.5-lts.1",
     "nanoid": "^3.3.8",
     "prisma": "6.0.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "zod": "^3.24.1"
   }
 }
