--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "node --watch index.js",
     "start": "node index.js",
-    "api:dev": "pnpm run api:dev -F @verland3.0/api"
+    "api:dev": "pnpm run -F @verland3.0/api api:dev",
+    "admin:dev": "pnpm run -F @verland3.0/admin dev"
   },
   "keywords": [],
   "author": "",
