--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -18,6 +18,7 @@
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
     "immer": "^10.1.1",
+    "js-cookie": "^3.0.5",
     "lodash-es": "^4.17.21",
     "nanoid": "^5.0.9",
     "react": "^18.3.1",
