--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -32,6 +32,7 @@
     "nanoid": "^3.3.8",
     "prisma": "6.0.1",
     "sqlite3": "^5.1.7",
+    "wechatpay-node-v3": "^2.2.1",
     "wxpay-v3": "^3.0.2",
     "zod": "^3.24.1"
   }
