--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.5.2",
     "@loadable/component": "^5.16.4",
     "antd": "^5.22.5",
+    "antd-style": "^3.7.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
@@ -33,6 +34,7 @@
     "@eslint/js": "^9.17.0",
     "@types/loadable__component": "^5.13.9",
     "@types/lodash-es": "^4.17.12",
+    "@types/node": "^22.13.5",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
