--- a/packages/admin/tsconfig.json
+++ b/packages/admin/tsconfig.json
@@ -1,5 +1,13 @@
 {
   "files": [],
+  "compilerOptions": {
+    "declaration": true,
+    "declarationDir": "./types",
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"]
+    },
+  },
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
